--- a/tiendaLibros/src/app/components/users/login/login.component.html
+++ b/tiendaLibros/src/app/components/users/login/login.component.html
@@ -1,3 +1,35 @@
-<p>
-  login works!
-</p>
+<section id="login" class="mb-5 mt-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 col-md-4 mx-auto">
+        <div class="card_login">
+          <div class="card">
+            <div class="card-body text-center">
+              <form #formLogin="ngForm" (ngSubmit)="onLogin(formLogin)">
+                <h1 class="h3 mb-3 font-weight-normal" *ngIf="!isError">Login</h1>
+                <div class="alert alert-danger" role="alert" *ngIf="isError">
+                  Algo no esta bien!
+                </div>
+                <div class="form-group">
+                  <input type="email" id="email" name="email" class="form-control" placeholder="Correo Electronico" [(ngModel)]="user.email" required>
+                </div>
+                <div class="form-group">
+                  <input type="password" id="password" name="password" class="form-control" placeholder="Contraseña" [(ngModel)]="user.password"
+                    required>
+                </div>
+                <button type="submit" class="btn btn-lg btn-primary btn-block">Ingresar</button>
+                <div class="form-group">
+                  <a routerLink="/user/register" class="form-control login-user">¿Eres usuario nuevo?</a>
+                </div>
+                <div class="form-group">
+                  <a href="" class="btn btn-block btn-social btn-facebook"><span class="fa fa-facebook"></span> Facebook</a>
+                  <a href="" class="btn btn-block btn-social btn-google"><span class="fa fa-google"></span> Google</a>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
