--- a/tiendaLibros/src/app/components/users/register/register.component.html
+++ b/tiendaLibros/src/app/components/users/register/register.component.html
@@ -1,3 +1,50 @@
-<p>
-  register works!
-</p>
+<section id="register" class="mb-5 mt-5">
+  <div class="container">
+    <div class="row">
+
+      <div class="col-xs-12 col-sm-6 col-md-4 mx-auto">
+        <div class="card_register">
+          <div class="card">
+            <div class="card-body text-center">
+              <form #formRegister="ngForm" (ngSubmit)="onRegister(formRegister)">
+                <h1 class="h3 mb-3 font-weight-normal">Registrar</h1>
+                <div class="alert alert-danger" role="alert" *ngIf="isError">
+                  {{msgError}}
+                </div>
+                <div class="form-group">
+                  <input type="text" #name="ngModel" name="name" class="form-control" placeholder="Nombre" [(ngModel)]="user.name" required minlength="4"
+                    maxlength="15">
+                </div>
+
+                <div class="alert alert-danger" role="alert" *ngIf="name.touched && !name.valid">
+                  <div *ngIf="name.errors.required">El nombre es requerido</div>
+                  <div *ngIf="name.errors.minlength">El nombre debe tener al menos 4 caracteres</div>
+                </div>
+                <div class="form-group">
+                  <input type="email" #email="ngModel" name="email" class="form-control" placeholder="Correo Electronico" [(ngModel)]="user.email" required
+                    minlength="8">
+                </div>
+                <div class="alert alert-danger" role="alert" *ngIf="email.touched && !email.valid">
+                  <div *ngIf="email.errors.required">El correo es requerido</div>
+                  <div *ngIf="email.errors.minlength">EL correo debe tener al menos 8 caracteres</div>
+                </div>
+                <div class="form-group">
+                  <input type="password" #password="ngModel" name="password" class="form-control" placeholder="Contraseña" [(ngModel)]="user.password"
+                    required minlength="5" maxlength="10">
+                </div>
+                <div class="alert alert-danger" role="alert" *ngIf="password.touched && !password.valid">
+                  <div *ngIf="password.errors.required">La contraseña es requerida</div>
+                  <div *ngIf="password.errors.minlength">La contraseña debe tener al menos 5 caracteres</div>
+                </div>
+                <button type="submit" class="btn btn-lg btn-primary btn-block">Registrar</button>
+                <div class="form-group">
+                  <a routerLink="/user/login" class="form-control login-user">¿Ya tienes una cuenta?</a>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
