--- a/tiendaLibros/src/app/components/users/login/login.component.html
+++ b/tiendaLibros/src/app/components/users/login/login.component.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="form-group">
                   <a href="" class="btn btn-block btn-social btn-facebook"><span class="fa fa-facebook"></span> Facebook</a>
-                  <a href="" class="btn btn-block btn-social btn-google"><span class="fa fa-google"></span> Google</a>
+                  <a href="#" class="btn btn-block btn-social btn-google" (click)="onLoginGoogle()"><span class="fa fa-google"></span> Google</a>
                 </div>
               </form>
             </div>
