--- a/tiendaLibros/src/app/components/navbar/navbar.component.html
+++ b/tiendaLibros/src/app/components/navbar/navbar.component.html
@@ -11,6 +11,7 @@
         <a class="nav-link" routerLink="/offers">Ofertas
         </a>
       </li>
+      LOGGET: {{isLogged}}
     </ul>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item" *ngIf="!isLogged">
