--- a/tiendaLibros/src/app/components/users/login/login.component.html
+++ b/tiendaLibros/src/app/components/users/login/login.component.html
@@ -5,25 +5,24 @@
         <div class="card_login">
           <div class="card">
             <div class="card-body text-center">
-              <form #formLogin="ngForm" (ngSubmit)="onLogin(formLogin)">
+              <form #formLogin="ngForm" >
                 <h1 class="h3 mb-3 font-weight-normal" *ngIf="!isError">Login</h1>
                 <div class="alert alert-danger" role="alert" *ngIf="isError">
                   Algo no esta bien!
                 </div>
                 <div class="form-group">
-                  <input type="email" id="email" name="email" class="form-control" placeholder="Correo Electronico" [(ngModel)]="user.email" required>
+                  <input type="email" id="email" name="email" class="form-control" placeholder="Correo Electronico" required>
                 </div>
                 <div class="form-group">
-                  <input type="password" id="password" name="password" class="form-control" placeholder="Contraseña" [(ngModel)]="user.password"
-                    required>
+                  <input type="password" id="password" name="password" class="form-control" placeholder="Contraseña" required>
                 </div>
                 <button type="submit" class="btn btn-lg btn-primary btn-block">Ingresar</button>
                 <div class="form-group">
                   <a routerLink="/user/register" class="form-control login-user">¿Eres usuario nuevo?</a>
                 </div>
                 <div class="form-group">
-                  <a href="" class="btn btn-block btn-social btn-facebook"><span class="fa fa-facebook"></span> Facebook</a>
-                  <a href="#" class="btn btn-block btn-social btn-google" (click)="onLoginGoogle()"><span class="fa fa-google"></span> Google</a>
+                  <button class="btn btn-block btn-social btn-facebook" (click)="onLoginFacebook()"><span class="fa fa-facebook"></span> Facebook</button>
+                  <button class="btn btn-block btn-social btn-google" (click)="onLoginGoogle()"><span class="fa fa-google"></span> Google</button>
                 </div>
               </form>
             </div>
