se cambian configuración de login al archivo service

--- a/tiendaLibros/src/app/components/users/login/login.component.html
+++ b/tiendaLibros/src/app/components/users/login/login.component.html
@@ -7,7 +7,7 @@
             <div class="card-body text-center">
               <form #formLogin="ngForm" >
                 <h1 class="h3 mb-3 font-weight-normal" *ngIf="!isError">Login</h1>
-                <div class="alert alert-danger" role="alert" *ngIf="isError">
+                <div class="alert alert-danger" role="alert" >
                   Algo no esta bien!
                 </div>
                 <div class="form-group">
