se comienza a configurar codigo para registrar usuario

--- a/tiendaLibros/src/app/components/users/register/register.component.html
+++ b/tiendaLibros/src/app/components/users/register/register.component.html
@@ -6,22 +6,14 @@
         <div class="card_register">
           <div class="card">
             <div class="card-body text-center">
-              <form #formRegister="ngForm" (ngSubmit)="onRegister(formRegister)">
+              <form #formRegister="ngForm" (ngSubmit)="onAddUser()">
                 <h1 class="h3 mb-3 font-weight-normal">Registrar</h1>
                 <div class="alert alert-danger" role="alert" *ngIf="isError">
                   {{msgError}}
                 </div>
-                <div class="form-group">
-                  <input type="text" #name="ngModel" name="name" class="form-control" placeholder="Nombre" [(ngModel)]="user.name" required minlength="4"
-                    maxlength="15">
-                </div>
 
-                <div class="alert alert-danger" role="alert" *ngIf="name.touched && !name.valid">
-                  <div *ngIf="name.errors.required">El nombre es requerido</div>
-                  <div *ngIf="name.errors.minlength">El nombre debe tener al menos 4 caracteres</div>
-                </div>
                 <div class="form-group">
-                  <input type="email" #email="ngModel" name="email" class="form-control" placeholder="Correo Electronico" [(ngModel)]="user.email" required
+                  <input type="email"  name="email" class="form-control" placeholder="Correo Electronico" [(ngModel)]="email" required
                     minlength="8">
                 </div>
                 <div class="alert alert-danger" role="alert" *ngIf="email.touched && !email.valid">
@@ -29,7 +21,7 @@
                   <div *ngIf="email.errors.minlength">EL correo debe tener al menos 8 caracteres</div>
                 </div>
                 <div class="form-group">
-                  <input type="password" #password="ngModel" name="password" class="form-control" placeholder="Contraseña" [(ngModel)]="user.password"
+                  <input type="password" name="password" class="form-control" placeholder="Contraseña" [(ngModel)]="password"
                     required minlength="5" maxlength="10">
                 </div>
                 <div class="alert alert-danger" role="alert" *ngIf="password.touched && !password.valid">
@@ -39,6 +31,10 @@
                 <button type="submit" class="btn btn-lg btn-primary btn-block">Registrar</button>
                 <div class="form-group">
                   <a routerLink="/user/login" class="form-control login-user">¿Ya tienes una cuenta?</a>
+                </div>
+                <div class="form-group">
+                  <button class="btn btn-block btn-social btn-facebook" (click)="onLoginFacebook()"><span class="fa fa-facebook"></span> Facebook</button>
+                  <button class="btn btn-block btn-social btn-google" (click)="onLoginGoogle()"><span class="fa fa-google"></span> Google</button>
                 </div>
               </form>
             </div>
