se agrega configuración para subir imagenes al registro de usuarios con firebase

--- a/tiendaLibros/src/app/components/users/register/register.component.html
+++ b/tiendaLibros/src/app/components/users/register/register.component.html
@@ -28,6 +28,10 @@
                   <div *ngIf="password.errors.required">La contraseña es requerida</div>
                   <div *ngIf="password.errors.minlength">La contraseña debe tener al menos 5 caracteres</div>
                 </div>
+                <div class="form-group">
+                  <h5>Seleccionar Imagen</h5>
+                  <input type="file" accept=".png, .jpg" (change)="onUpload($event)">
+                </div>
                 <button type="submit" class="btn btn-lg btn-primary btn-block">Registrar</button>
                 <div class="form-group">
                   <a routerLink="/user/login" class="form-control login-user">¿Ya tienes una cuenta?</a>
