--- a/tiendaLibros/src/app/components/admin/list-book/list-book.component.html
+++ b/tiendaLibros/src/app/components/admin/list-book/list-book.component.html
@@ -1,3 +1,35 @@
-<p>
-  list-book works!
-</p>
+<section class="row mt-5">
+  <div class="col">
+    <button class="btn btn-primary float-right mb-3" data-toggle="modal" data-target="#">Nuevo Libro</button>
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Titulo</th>
+          <th scope="col">Autor</th>
+          <th scope="col">Idioma</th>
+          <th scope="col">Precio</th>
+          <th scope="col">Oferta</th>
+          <th scope="col">&nbsp;</th>
+          <th scope="col">&nbsp;</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let book of books; index as i">
+          <th scope="row">{{i+1}}</th>
+          <td>{{book.titulo}}</td>
+          <td>{{book.autor}}</td>
+          <td>{{book.idioma}}</td>
+          <td>{{book.precio}}</td>
+          <td>{{book.oferta}}</td>
+          <td>
+            <button class="btn btn-success">Actualizar</button>
+          </td>
+          <td>
+              <button class="btn btn-danger">Eliminar</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</section>
