--- a/tiendaLibros/src/app/components/admin/list-book/list-book.component.html
+++ b/tiendaLibros/src/app/components/admin/list-book/list-book.component.html
@@ -1,6 +1,6 @@
 <section class="row mt-5">
   <div class="col">
-    <button class="btn btn-primary float-right mb-3" >Nuevo Libro</button>
+    <button class="btn btn-primary float-right mb-3" data-toggle="modal" data-target="#modalBook">Nuevo Libro</button>
     <table class="table table-hover">
       <thead>
         <tr>
@@ -33,3 +33,4 @@
     </table>
   </div>
 </section>
+<app-modal></app-modal>
