--- a/tiendaLibros/src/app/components/modal/modal.component.html
+++ b/tiendaLibros/src/app/components/modal/modal.component.html
@@ -2,26 +2,63 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Agregar nuevo</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Agregar nuevo libro</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        <form>
+        <form #formBook="ngForm" (ngSubmit)="onSaveBook(formBook)">
+          <input type="text" name="bookId">
           <div class="form-group">
-            <label for="recipient-name" class="col-form-label">Recipient:</label>
-            <input type="text" class="form-control" id="recipient-name">
+            <label for="titulo" class="col-form-label">Titulo:</label>
+            <input type="text" class="form-control" name="titulo">
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="idioma">Idioma:</label>
+              <select name="idioma"  class="form-control">
+                <option value="Ingles">Inglés</option>
+                <option value="Castellano">Castellano</option>
+              </select>
+            </div>
+            <div class="form-group col-md-6">
+              <label for="precio">Precio:</label>
+              <input type="text" name="precio" class="form-control" placeholder="0.00 €">
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="autor">Autor:</label>
+              <input type="text" name="autor" class="form-control" placeholder="Autor">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="oferta">Oferta</label>
+              <select name="oferta"  class="form-control">
+                <option value="1">SI</option>
+                <option value="0">NO</option>
+              </select>
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="portada">Portada</label>
+              <input type="text" name="portada" class="form-control" placeholder="Portada">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="link_amazon">Link Amazon</label>
+              <input type="text" name="link_amazon" class="form-control" placeholder="Link Amazon">
+            </div>
           </div>
           <div class="form-group">
-            <label for="message-text" class="col-form-label">Message:</label>
-            <textarea class="form-control" id="message-text"></textarea>
+            <label for="descripcion" class="col-form-label">Descripción:</label>
+            <textarea class="form-control" name="descripcion"></textarea>
           </div>
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Send message</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+        <button type="button" class="btn btn-primary">Guardar Libro</button>
       </div>
     </div>
   </div>
