--- a/tiendaLibros/src/app/components/modal/modal.component.html
+++ b/tiendaLibros/src/app/components/modal/modal.component.html
@@ -12,29 +12,29 @@
           <input type="text" name="bookId">
           <div class="form-group">
             <label for="titulo" class="col-form-label">Titulo:</label>
-            <input type="text" class="form-control" name="titulo">
+            <input type="text" class="form-control" name="titulo" [(ngModel)]="this.dataApi.selectedBook.titulo">
           </div>
           <div class="form-row">
             <div class="form-group col-md-6">
               <label for="idioma">Idioma:</label>
-              <select name="idioma"  class="form-control">
+              <select name="idioma"  class="form-control" [(ngModel)]="this.dataApi.selectedBook.idioma">
                 <option value="Ingles">Inglés</option>
                 <option value="Castellano">Castellano</option>
               </select>
             </div>
             <div class="form-group col-md-6">
               <label for="precio">Precio:</label>
-              <input type="text" name="precio" class="form-control" placeholder="0.00 €">
+              <input type="text" name="precio" class="form-control" placeholder="0.00 €" [(ngModel)]="this.dataApi.selectedBook.precio">
             </div>
           </div>
           <div class="form-row">
             <div class="form-group col-md-6">
               <label for="autor">Autor:</label>
-              <input type="text" name="autor" class="form-control" placeholder="Autor">
+              <input type="text" name="autor" class="form-control" placeholder="Autor" [(ngModel)]="this.dataApi.selectedBook.autor">
             </div>
             <div class="form-group col-md-6">
               <label for="oferta">Oferta</label>
-              <select name="oferta"  class="form-control">
+              <select name="oferta"  class="form-control" [(ngModel)]="this.dataApi.selectedBook.oferta">
                 <option value="1">SI</option>
                 <option value="0">NO</option>
               </select>
@@ -43,23 +43,24 @@
           <div class="form-row">
             <div class="form-group col-md-6">
               <label for="portada">Portada</label>
-              <input type="text" name="portada" class="form-control" placeholder="Portada">
+              <input type="text" name="portada" class="form-control" placeholder="Portada" [(ngModel)]="this.dataApi.selectedBook.portada">
             </div>
             <div class="form-group col-md-6">
               <label for="link_amazon">Link Amazon</label>
-              <input type="text" name="link_amazon" class="form-control" placeholder="Link Amazon">
+              <input type="text" name="link_amazon" class="form-control" placeholder="Link Amazon" [(ngModel)]="this.dataApi.selectedBook.link_amazon">
             </div>
           </div>
           <div class="form-group">
             <label for="descripcion" class="col-form-label">Descripción:</label>
-            <textarea class="form-control" name="descripcion"></textarea>
+            <textarea class="form-control" name="descripcion" [(ngModel)]="this.dataApi.selectedBook.descripcion"></textarea>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+            <button type="submit" class="btn btn-primary">Guardar Libro</button>
           </div>
         </form>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-        <button type="button" class="btn btn-primary">Guardar Libro</button>
-      </div>
+
     </div>
   </div>
 </div>
