se agrega opcion eliminar libros

--- a/tiendaLibros/src/app/components/admin/list-book/list-book.component.html
+++ b/tiendaLibros/src/app/components/admin/list-book/list-book.component.html
@@ -26,7 +26,7 @@
             <button class="btn btn-success">Actualizar</button>
           </td>
           <td>
-              <button class="btn btn-danger">Eliminar</button>
+              <button class="btn btn-danger" (click)="onDeleteBook(book.id)">Eliminar</button>
           </td>
         </tr>
       </tbody>
