se agregan roles al proyecto con posibles mejoras para agregar mas roles

--- a/tiendaLibros/src/app/components/modal/modal.component.html
+++ b/tiendaLibros/src/app/components/modal/modal.component.html
@@ -12,9 +12,11 @@
       <div class="modal-body">
         <form #formBook="ngForm" (ngSubmit)="onSaveBook(formBook)">
           <input type="hidden" name="id" [(ngModel)]="this.dataApi.selectedBook.id">
+          <input type="text" name="userUid" [value]="userUid">
           <div class="form-group">
             <label for="titulo" class="col-form-label">Titulo:</label>
             <input type="text" class="form-control" name="titulo" [(ngModel)]="this.dataApi.selectedBook.titulo">
+
           </div>
           <div class="form-row">
             <div class="form-group col-md-6">
