--- a/tiendaLibros/src/app/components/admin/list-book/list-book.component.html
+++ b/tiendaLibros/src/app/components/admin/list-book/list-book.component.html
@@ -1,7 +1,7 @@
 <section class="row mt-5">
   <div class="col">
     <button class="btn btn-primary float-right mb-3" data-toggle="modal" data-target="#modalBook">Nuevo Libro</button>
-    {{isAdmin}}
+    ADMIN: {{isAdmin}}
     <table class="table table-hover">
       <thead>
         <tr>
@@ -23,16 +23,27 @@
           <td>{{book.idioma}}</td>
           <td>{{book.precio}}</td>
           <td>{{book.oferta == 1 ? 'SI' : 'NO'}}</td>
-          <td>
+          <td *ngIf="book.userUid == userUid || isAdmin == true ; else noOwner">
             <button class="btn btn-success" data-toggle="modal" data-target="#modalBook"
              (click)="onPreUpdateBook(book)">Actualizar</button>
           </td>
-          <td>
+          <ng-template #noOwner>
+            <td>
+                <button class="btn btn-success" disabled="true">Actualizar</button>
+            </td>
+          </ng-template>
+
+          <td *ngIf="isAdmin == true; else noAdmin">
               <button class="btn btn-danger" (click)="onDeleteBook(book.id)">Eliminar</button>
           </td>
+          <ng-template #noAdmin>
+            <td>
+              <button class="btn btn-danger" disabled="true">Eliminar</button>
+          </td>
+          </ng-template>
         </tr>
       </tbody>
     </table>
   </div>
 </section>
-<app-modal></app-modal>
+<app-modal [userUid]="userUid"></app-modal>
