se corrigen detalles y se finaliza proyecto full operativo

--- a/tiendaLibros/src/app/components/admin/list-book/list-book.component.html
+++ b/tiendaLibros/src/app/components/admin/list-book/list-book.component.html
@@ -1,8 +1,7 @@
 <section class="row mt-5">
   <div class="col">
     <button class="btn btn-primary float-right mb-3" data-toggle="modal" data-target="#modalBook">Nuevo Libro</button>
-    ADMIN: {{isAdmin}}
-    <table class="table table-hover">
+     <table class="table table-hover">
       <thead>
         <tr>
           <th scope="col">#</th>
@@ -29,7 +28,7 @@
           </td>
           <ng-template #noOwner>
             <td>
-                <button class="btn btn-success" disabled="true">Actualizar</button>
+                <button class="btn btn-secondary" disabled="true">Actualizar</button>
             </td>
           </ng-template>
 
