--- a/tiendaLibros/src/app/components/users/profile/profile.component.html
+++ b/tiendaLibros/src/app/components/users/profile/profile.component.html
@@ -13,7 +13,7 @@
           </p>
 
           <hr>
-          <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores suscipit itaque minima quae.</span>
+          <span>Bienvenido {{user.email}} esta es tu cuenta, que disfrutes nuestra libreria</span>
         </div>
       </div>
     </div>
