--- a/tiendaLibros/src/app/components/details-book/details-book.component.html
+++ b/tiendaLibros/src/app/components/details-book/details-book.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-sm-6 col-md-4 mx-auto">
-        <div class="vard_book">
+        <div class="card_book">
           <div class="card">
             <div class="card-body text-center">
               <p>
